# koopa-svn

trunk/: AUTHORS  Doxyfile  Makefile.in  configure  configure.in  configure.in.in  koopa.kdevelop  koopa.kdevelop.pcs  koopa.kdevses  subdirs
trunk/autom4te.cache/: output.0  traces.0
trunk/debug/: Makefile  config.h  config.status  libtool
trunk/debug/doc/: Makefile
trunk/debug/doc/en/: Makefile  index.cache.bz2
trunk/debug/po/: Makefile
trunk/debug/src/: Makefile  koopa  koopa.moc
trunk/debug/src/.deps/: koopa.Po  koopainit.Po  main.Po
trunk/doc/: Makefile.am  Makefile.in
trunk/doc/en/: Makefile.am  Makefile.in  index.docbook
trunk/libgaim/: Makefile  Makefile.am  Makefile.in  account.loT  away.h  core.c  koopa.c  libgaim_la-core.loT  server.c  status.c
trunk/libgaim/.deps/: libgaim_la-account.Plo  libgaim_la-accountopt.Plo  libgaim_la-blist.Plo  libgaim_la-buddyicon.Plo  libgaim_la-cmds.Plo  libgaim_la-connection.Plo  libgaim_la-conversation.Plo
trunk/src/: Makefile.am  Makefile.in  koopa.cpp  koopa.desktop  koopa.h  koopa.lsm  koopainit.cpp  koopainit.h  koopaui.rc  main.cpp
trunk/templates/: cpp
